fixed image alignment

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -34,7 +34,7 @@
   box-sizing: border-box;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: start;
   align-content:first baseline;
   margin-top: 10px;
